@@ -1,6 +1,6 @@
 // 2001-05-21 Benjamin Kosnik  <bkoz@redhat.com>
 
-// Copyright (C) 2001 Free Software Foundation, Inc.
+// Copyright (C) 2001, 2002 Free Software Foundation, Inc.
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
 // software; you can redistribute it and/or modify it under the
@@ -38,9 +38,50 @@ void test01()
   VERIFY( std::strncmp(strlit, buf, strlitsize) != 0 );
 }
 
+void test02(std::stringbuf& in, bool pass)
+{
+  using namespace std;
+  typedef streambuf::pos_type pos_type;
+  typedef streambuf::off_type off_type;
+  pos_type bad = pos_type(off_type(-1));
+  pos_type p = 0;
+
+  // seekoff
+  p = in.pubseekoff(0, ios_base::beg, ios_base::in);
+  if (pass)
+    VERIFY( p != bad );
+
+  p = in.pubseekoff(0, ios_base::beg, ios_base::out); 
+  VERIFY( p == bad );
+
+  p = in.pubseekoff(0, ios_base::beg); 
+  VERIFY( p == bad );
+
+
+  // seekpos
+  p = in.pubseekpos(0, ios_base::in);
+  if (pass)
+    VERIFY( p != bad );
+
+  p = in.pubseekpos(0, ios_base::out); 
+  VERIFY( p == bad );
+
+  p = in.pubseekpos(0); 
+  VERIFY( p == bad );
+}
+
 int main() 
 {
+  using namespace std;
   test01();
+
+  // movie star, submarine scientist!
+  stringbuf in1("Hedy Lamarr", ios_base::in);
+  stringbuf in2(ios_base::in);
+  stringbuf in3("", ios_base::in);
+  test02(in1, true);
+  test02(in2, false);
+  test02(in3, false);
 
   return 0;
 }
